--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,13 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1']
+        php-versions: ['8.0', '8.1', '8.2']
     
     steps:
-      - name: Set PHP Version
-        run: sudo update-alternatives --set php /usr/bin/php${{ matrix.php-versions }}
+      - name: Setup PHP Version
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-versions }}
 
       - name: Get PHP Version
         run: |
