--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
         }
     },
     "require": {
-        "symfony/http-client": "^6.0",
-        "symfony/http-kernel": "^6.0",
-        "symfony/config": "^6.0",
-        "symfony/dependency-injection": "^6.0",
-        "symfony/cache": "^6.0"
+        "symfony/http-client": "^6.0||^7.0",
+        "symfony/http-kernel": "^6.0||^7.0",
+        "symfony/config": "^6.0||^7.0",
+        "symfony/dependency-injection": "^6.0||^7.0",
+        "symfony/cache": "^6.0||^7.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^6.0"
+        "symfony/phpunit-bridge": "^6.0||^7.0"
     },
     "extra": {
         "symfony": {
